Assignment5/y.output
Terminals unused in grammar

    COMMENT
    ENUM
    UNSIGNED
    SIGNED
    _BOOL
    _COMPLEX
    STRUCT
    _IMAGINARY
    TYPEDEF
    UNION
    HASH
    THEN


State 332 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 M: %empty

    2 N: %empty

    3 constant: INTEGER_CONSTANT
    4         | FLOAT_CONSTANT
    5         | CHAR_CONSTANT

    6 primary_expression: IDENTIFIER
    7                   | constant
    8                   | STRING_LITERAL
    9                   | CIROPEN expression CIRCLOSE

   10 postfix_expression: primary_expression
   11                   | postfix_expression SQROPEN expression SQRCLOSE
   12                   | postfix_expression CIROPEN argument_expression_list_opt CIRCLOSE
   13                   | postfix_expression DOT IDENTIFIER
   14                   | postfix_expression ARROW IDENTIFIER
   15                   | postfix_expression INCRE
   16                   | postfix_expression DECRE
   17                   | CIROPEN type_name CIRCLOSE CUROPEN initializer_list CURCLOSE
   18                   | CIROPEN type_name CIRCLOSE CUROPEN initializer_list COMMA CURCLOSE

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list COMMA assignment_expression

   21 argument_expression_list_opt: argument_expression_list
   22                             | %empty

   23 unary_expression: postfix_expression
   24                 | INCRE unary_expression
   25                 | DECRE unary_expression
   26                 | unary_operator cast_expression
   27                 | SIZEOF unary_expression
   28                 | SIZEOF CIROPEN type_name CIRCLOSE

   29 unary_operator: AND
   30               | MUL
   31               | ADD
   32               | SUB
   33               | NEQ
   34               | EXCL

   35 cast_expression: unary_expression
   36                | CIROPEN type_name CIRCLOSE cast_expression

   37 multiplicative_expression: cast_expression
   38                          | multiplicative_expression MUL cast_expression
   39                          | multiplicative_expression DIV cast_expression
   40                          | multiplicative_expression MOD cast_expression

   41 additive_expression: multiplicative_expression
   42                    | additive_expression ADD multiplicative_expression
   43                    | additive_expression SUB multiplicative_expression

   44 shift_expression: additive_expression
   45                 | shift_expression LESH additive_expression
   46                 | shift_expression RISH additive_expression

   47 relational_expression: shift_expression
   48                      | relational_expression LST shift_expression
   49                      | relational_expression GRT shift_expression
   50                      | relational_expression LSE shift_expression
   51                      | relational_expression GRE shift_expression

   52 equality_expression: relational_expression
   53                    | equality_expression EQUATE relational_expression
   54                    | equality_expression NEQE relational_expression

   55 and_expression: equality_expression
   56               | and_expression AND equality_expression

   57 exclusive_or_expression: and_expression
   58                        | exclusive_or_expression XOR and_expression

   59 inclusive_or_expression: exclusive_or_expression
   60                        | inclusive_or_expression OR exclusive_or_expression

   61 logical_and_expression: inclusive_or_expression
   62                       | logical_and_expression N ANDNUM M inclusive_or_expression

   63 logical_or_expression: logical_and_expression
   64                      | logical_or_expression N ORNUM M logical_and_expression

   65 conditional_expression: logical_or_expression
   66                       | logical_or_expression N QUESTION M expression N COLON M conditional_expression

   67 assignment_expression: conditional_expression
   68                      | unary_expression assignment_operator assignment_expression

   69 assignment_operator: EQUAL
   70                    | MULEQ
   71                    | DIVEQ
   72                    | MODEQ
   73                    | ADDEQ
   74                    | SUBEQ
   75                    | SHLEQ
   76                    | SHREQ
   77                    | ANDE
   78                    | XORE
   79                    | ORE

   80 expression: assignment_expression
   81           | expression COMMA assignment_expression

   82 constant_expression: conditional_expression

   83 declaration: declaration_specifiers init_declarator_list_opt LINEEND

   84 init_declarator_list_opt: init_declarator_list
   85                         | %empty

   86 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   87                       | type_specifier declaration_specifiers_opt
   88                       | type_qualifier declaration_specifiers_opt
   89                       | function_specifier declaration_specifiers_opt

   90 declaration_specifiers_opt: declaration_specifiers
   91                           | %empty

   92 init_declarator_list: init_declarator
   93                     | init_declarator_list COMMA init_declarator

   94 init_declarator: declarator
   95                | declarator EQUAL initializer

   96 storage_class_specifier: EXTERN
   97                        | STATIC
   98                        | AUTO
   99                        | REGISTER

  100 type_specifier: VOID
  101               | CHAR
  102               | SHORT
  103               | INT
  104               | LONG
  105               | FLOAT
  106               | DOUBLE

  107 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  108                         | type_qualifier specifier_qualifier_list_opt

  109 specifier_qualifier_list_opt: specifier_qualifier_list
  110                             | %empty

  111 type_qualifier: CONST
  112               | VOLATILE
  113               | RESTRICT

  114 function_specifier: INLINE

  115 declarator: pointer direct_declarator
  116           | direct_declarator

  117 direct_declarator: IDENTIFIER
  118                  | CIROPEN declarator CIRCLOSE
  119                  | direct_declarator SQROPEN type_qualifier_list assignment_expression SQRCLOSE
  120                  | direct_declarator SQROPEN type_qualifier_list SQRCLOSE
  121                  | direct_declarator SQROPEN assignment_expression SQRCLOSE
  122                  | direct_declarator SQROPEN SQRCLOSE
  123                  | direct_declarator SQROPEN STATIC type_qualifier_list assignment_expression SQRCLOSE
  124                  | direct_declarator SQROPEN STATIC assignment_expression SQRCLOSE
  125                  | direct_declarator SQROPEN type_qualifier_list MUL SQRCLOSE
  126                  | direct_declarator SQROPEN MUL SQRCLOSE
  127                  | direct_declarator CIROPEN changetable parameter_type_list CIRCLOSE
  128                  | direct_declarator CIROPEN identifier_list CIRCLOSE
  129                  | direct_declarator CIROPEN changetable CIRCLOSE

  130 type_qualifier_list_opt: type_qualifier_list
  131                        | %empty

  132 changetable: %empty

  133 pointer: MUL type_qualifier_list_opt
  134        | MUL type_qualifier_list_opt pointer

  135 type_qualifier_list: type_qualifier
  136                    | type_qualifier_list type_qualifier

  137 parameter_type_list: parameter_list
  138                    | parameter_list COMMA TDOT

  139 parameter_list: parameter_declaration
  140               | parameter_list COMMA parameter_declaration

  141 parameter_declaration: declaration_specifiers declarator
  142                      | declaration_specifiers

  143 identifier_list: IDENTIFIER
  144                | identifier_list COMMA IDENTIFIER

  145 type_name: specifier_qualifier_list

  146 initializer: assignment_expression
  147            | CUROPEN initializer_list CURCLOSE
  148            | CUROPEN initializer_list COMMA CURCLOSE

  149 initializer_list: designation_opt initializer
  150                 | initializer_list COMMA designation_opt initializer

  151 designation_opt: designation
  152                | %empty

  153 designation: designator_list EQUAL

  154 designator_list: designator
  155                | designator_list designator

  156 designator: SQROPEN constant_expression SQRCLOSE
  157           | DOT IDENTIFIER

  158 statement: labeled_statement
  159          | compound_statement
  160          | expression_statement
  161          | selection_statement
  162          | iteration_statement
  163          | jump_statement

  164 labeled_statement: IDENTIFIER COLON statement
  165                  | CASE constant_expression COLON statement
  166                  | DEFAULT COLON statement

  167 compound_statement: CUROPEN block_item_list_opt CURCLOSE

  168 block_item_list_opt: %empty
  169                    | block_item_list

  170 block_item_list: block_item
  171                | block_item_list M block_item

  172 block_item: declaration
  173           | statement

  174 expression_statement: expression LINEEND
  175                     | LINEEND

  176 selection_statement: IF CIROPEN expression N CIRCLOSE M statement N
  177                    | IF CIROPEN expression N CIRCLOSE M statement N ELSE M statement
  178                    | SWITCH CIROPEN expression CIRCLOSE statement

  179 iteration_statement: WHILE M CIROPEN expression CIRCLOSE M statement
  180                    | DO M statement M WHILE CIROPEN expression CIRCLOSE LINEEND
  181                    | FOR CIROPEN expression_statement M expression_statement CIRCLOSE M statement
  182                    | FOR CIROPEN expression_statement M expression_statement M expression N CIRCLOSE M statement

  183 jump_statement: GOTO IDENTIFIER LINEEND
  184               | CONTINUE LINEEND
  185               | BREAK LINEEND
  186               | RETURN expression LINEEND
  187               | RETURN LINEEND

  188 translation_unit: external_declaration
  189                 | translation_unit external_declaration

  190 external_declaration: function_definition
  191                     | declaration

  192 function_definition: declaration_specifiers declarator declaration_list_opt changetable compound_statement

  193 declaration_list: declaration
  194                 | declaration_list declaration

  195 declaration_list_opt: %empty
  196                     | declaration_list


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    IDENTIFIER <symp> (258) 6 13 14 117 143 144 157 164 183
    FLOAT_CONSTANT <floatval> (259) 4
    CHAR_CONSTANT <charval> (260) 5
    STRING_LITERAL <stringval> (261) 8
    INTEGER_CONSTANT <intval> (262) 3
    COMMENT (263)
    AUTO (264) 98
    ENUM (265)
    RESTRICT (266) 113
    UNSIGNED (267)
    BREAK (268) 185
    EXTERN (269) 96
    RETURN (270) 186 187
    VOID (271) 100
    CASE (272) 165
    FLOAT (273) 105
    SHORT (274) 102
    VOLATILE (275) 112
    CHAR (276) 101
    FOR (277) 181 182
    SIGNED (278)
    WHILE (279) 179 180
    CONST (280) 111
    GOTO (281) 183
    SIZEOF (282) 27 28
    _BOOL (283)
    CONTINUE (284) 184
    IF (285) 176 177
    STATIC (286) 97 123 124
    _COMPLEX (287)
    DEFAULT (288) 166
    INLINE (289) 114
    STRUCT (290)
    _IMAGINARY (291)
    DO (292) 180
    INT (293) 103
    SWITCH (294) 178
    DOUBLE (295) 106
    LONG (296) 104
    TYPEDEF (297)
    ELSE (298) 177
    REGISTER (299) 99
    UNION (300)
    TDOT (301) 138
    EQUAL (302) 69 95 153
    MODEQ (303) 72
    ADDEQ (304) 73
    MULEQ (305) 70
    DIVEQ (306) 71
    SUBEQ (307) 74
    SHLEQ (308) 75
    SHREQ (309) 76
    SQROPEN (310) 11 119 120 121 122 123 124 125 126 156
    SQRCLOSE (311) 11 119 120 121 122 123 124 125 126 156
    CIROPEN (312) 9 12 17 18 28 36 118 127 128 129 176 177 178 179 180 181 182
    CIRCLOSE (313) 9 12 17 18 28 36 118 127 128 129 176 177 178 179 180 181 182
    CUROPEN (314) 17 18 147 148 167
    CURCLOSE (315) 17 18 147 148 167
    DOT (316) 13 157
    ARROW (317) 14
    INCRE (318) 15 24
    DECRE (319) 16 25
    AND (320) 29 56
    MUL (321) 30 38 125 126 133 134
    ADD (322) 31 42
    SUB (323) 32 43
    NEQ (324) 33
    EXCL (325) 34
    DIV (326) 39
    MOD (327) 40
    LESH (328) 45
    RISH (329) 46
    LST (330) 48
    GRT (331) 49
    LSE (332) 50
    GRE (333) 51
    EQUATE (334) 53
    NEQE (335) 54
    XOR (336) 58
    OR (337) 60
    ANDNUM (338) 62
    ORNUM (339) 64
    QUESTION (340) 66
    COLON (341) 66 164 165 166
    LINEEND (342) 83 174 175 180 183 184 185 186 187
    ANDE (343) 77
    XORE (344) 78
    ORE (345) 79
    COMMA (346) 18 20 81 93 138 140 144 148 150
    HASH (347)
    THEN (348)
    "then" (349)


Nonterminals, with rules where they appear

    $accept (95)
        on left: 0
    M <instr_number> (96)
        on left: 1
        on right: 62 64 66 171 176 177 179 180 181 182
    N <stat> (97)
        on left: 2
        on right: 62 64 66 176 177 182
    constant <expr> (98)
        on left: 3 4 5
        on right: 7
    primary_expression <expr> (99)
        on left: 6 7 8 9
        on right: 10
    postfix_expression <A> (100)
        on left: 10 11 12 13 14 15 16 17 18
        on right: 11 12 13 14 15 16 23
    argument_expression_list <num_params> (101)
        on left: 19 20
        on right: 20 21
    argument_expression_list_opt <num_params> (102)
        on left: 21 22
        on right: 12
    unary_expression <A> (103)
        on left: 23 24 25 26 27 28
        on right: 24 25 27 35 68
    unary_operator <unaryOp> (104)
        on left: 29 30 31 32 33 34
        on right: 26
    cast_expression <A> (105)
        on left: 35 36
        on right: 26 36 37 38 39 40
    multiplicative_expression <expr> (106)
        on left: 37 38 39 40
        on right: 38 39 40 41 42 43
    additive_expression <expr> (107)
        on left: 41 42 43
        on right: 42 43 44 45 46
    shift_expression <expr> (108)
        on left: 44 45 46
        on right: 45 46 47 48 49 50 51
    relational_expression <expr> (109)
        on left: 47 48 49 50 51
        on right: 48 49 50 51 52 53 54
    equality_expression <expr> (110)
        on left: 52 53 54
        on right: 53 54 55 56
    and_expression <expr> (111)
        on left: 55 56
        on right: 56 57 58
    exclusive_or_expression <expr> (112)
        on left: 57 58
        on right: 58 59 60
    inclusive_or_expression <expr> (113)
        on left: 59 60
        on right: 60 61 62
    logical_and_expression <expr> (114)
        on left: 61 62
        on right: 62 63 64
    logical_or_expression <expr> (115)
        on left: 63 64
        on right: 64 65 66
    conditional_expression <expr> (116)
        on left: 65 66
        on right: 66 67 82
    assignment_expression <expr> (117)
        on left: 67 68
        on right: 19 20 68 80 81 119 121 123 124 146
    assignment_operator (118)
        on left: 69 70 71 72 73 74 75 76 77 78 79
        on right: 68
    expression <expr> (119)
        on left: 80 81
        on right: 9 11 66 81 174 176 177 178 179 180 182 186
    constant_expression (120)
        on left: 82
        on right: 156 165
    declaration (121)
        on left: 83
        on right: 172 191 193 194
    init_declarator_list_opt (122)
        on left: 84 85
        on right: 83
    declaration_specifiers (123)
        on left: 86 87 88 89
        on right: 83 90 141 142 192
    declaration_specifiers_opt (124)
        on left: 90 91
        on right: 86 87 88 89
    init_declarator_list (125)
        on left: 92 93
        on right: 84 93
    init_declarator <symp> (126)
        on left: 94 95
        on right: 92 93
    storage_class_specifier (127)
        on left: 96 97 98 99
        on right: 86
    type_specifier (128)
        on left: 100 101 102 103 104 105 106
        on right: 87 107
    specifier_qualifier_list (129)
        on left: 107 108
        on right: 109 145
    specifier_qualifier_list_opt (130)
        on left: 109 110
        on right: 107 108
    type_qualifier (131)
        on left: 111 112 113
        on right: 88 108 135 136
    function_specifier (132)
        on left: 114
        on right: 89
    declarator <symp> (133)
        on left: 115 116
        on right: 94 95 118 141 192
    direct_declarator <symp> (134)
        on left: 117 118 119 120 121 122 123 124 125 126 127 128 129
        on right: 115 116 119 120 121 122 123 124 125 126 127 128 129
    type_qualifier_list_opt (135)
        on left: 130 131
        on right: 133 134
    changetable (136)
        on left: 132
        on right: 127 129 192
    pointer <sym_type> (137)
        on left: 133 134
        on right: 115 134
    type_qualifier_list (138)
        on left: 135 136
        on right: 119 120 123 125 130 136
    parameter_type_list (139)
        on left: 137 138
        on right: 127
    parameter_list (140)
        on left: 139 140
        on right: 137 138 140
    parameter_declaration (141)
        on left: 141 142
        on right: 139 140
    identifier_list (142)
        on left: 143 144
        on right: 128 144
    type_name (143)
        on left: 145
        on right: 17 18 28 36
    initializer <symp> (144)
        on left: 146 147 148
        on right: 95 149 150
    initializer_list (145)
        on left: 149 150
        on right: 17 18 147 148 150
    designation_opt (146)
        on left: 151 152
        on right: 149 150
    designation (147)
        on left: 153
        on right: 151
    designator_list (148)
        on left: 154 155
        on right: 153 155
    designator (149)
        on left: 156 157
        on right: 154 155
    statement <stat> (150)
        on left: 158 159 160 161 162 163
        on right: 164 165 166 173 176 177 178 179 180 181 182
    labeled_statement <stat> (151)
        on left: 164 165 166
        on right: 158
    compound_statement <stat> (152)
        on left: 167
        on right: 159 192
    block_item_list_opt <stat> (153)
        on left: 168 169
        on right: 167
    block_item_list <stat> (154)
        on left: 170 171
        on right: 169 171
    block_item <stat> (155)
        on left: 172 173
        on right: 170 171
    expression_statement <expr> (156)
        on left: 174 175
        on right: 160 181 182
    selection_statement <stat> (157)
        on left: 176 177 178
        on right: 161
    iteration_statement <stat> (158)
        on left: 179 180 181 182
        on right: 162
    jump_statement <stat> (159)
        on left: 183 184 185 186 187
        on right: 163
    translation_unit (160)
        on left: 188 189
        on right: 0 189
    external_declaration (161)
        on left: 190 191
        on right: 188 189
    function_definition (162)
        on left: 192
        on right: 190
    declaration_list (163)
        on left: 193 194
        on right: 194 196
    declaration_list_opt (164)
        on left: 195 196
        on right: 192


State 0

    0 $accept: . translation_unit $end

    AUTO      shift, and go to state 1
    RESTRICT  shift, and go to state 2
    EXTERN    shift, and go to state 3
    VOID      shift, and go to state 4
    FLOAT     shift, and go to state 5
    SHORT     shift, and go to state 6
    VOLATILE  shift, and go to state 7
    CHAR      shift, and go to state 8
    CONST     shift, and go to state 9
    STATIC    shift, and go to state 10
    INLINE    shift, and go to state 11
    INT       shift, and go to state 12
    DOUBLE    shift, and go to state 13
    LONG      shift, and go to state 14
    REGISTER  shift, and go to state 15

    declaration              go to state 16
    declaration_specifiers   go to state 17
    storage_class_specifier  go to state 18
    type_specifier           go to state 19
    type_qualifier           go to state 20
    function_specifier       go to state 21
    translation_unit         go to state 22
    external_declaration     go to state 23
    function_definition      go to state 24


State 1

   98 storage_class_specifier: AUTO .

    $default  reduce using rule 98 (storage_class_specifier)


State 2

  113 type_qualifier: RESTRICT .

    $default  reduce using rule 113 (type_qualifier)


State 3

   96 storage_class_specifier: EXTERN .

    $default  reduce using rule 96 (storage_class_specifier)


State 4

  100 type_specifier: VOID .

    $default  reduce using rule 100 (type_specifier)


State 5

  105 type_specifier: FLOAT .

    $default  reduce using rule 105 (type_specifier)


State 6

  102 type_specifier: SHORT .

    $default  reduce using rule 102 (type_specifier)


State 7

  112 type_qualifier: VOLATILE .

    $default  reduce using rule 112 (type_qualifier)


State 8

  101 type_specifier: CHAR .

    $default  reduce using rule 101 (type_specifier)


State 9

  111 type_qualifier: CONST .

    $default  reduce using rule 111 (type_qualifier)


State 10

   97 storage_class_specifier: STATIC .

    $default  reduce using rule 97 (storage_class_specifier)


State 11

  114 function_specifier: INLINE .

    $default  reduce using rule 114 (function_specifier)


State 12

  103 type_specifier: INT .

    $default  reduce using rule 103 (type_specifier)


State 13

  106 type_specifier: DOUBLE .

    $default  reduce using rule 106 (type_specifier)


State 14

  104 type_specifier: LONG .

    $default  reduce using rule 104 (type_specifier)


State 15

   99 storage_class_specifier: REGISTER .

    $default  reduce using rule 99 (storage_class_specifier)


State 16

  191 external_declaration: declaration .

    $default  reduce using rule 191 (external_declaration)


State 17

   83 declaration: declaration_specifiers . init_declarator_list_opt LINEEND
  192 function_definition: declaration_specifiers . declarator declaration_list_opt changetable compound_statement

    IDENTIFIER  shift, and go to state 25
    CIROPEN     shift, and go to state 26
    MUL         shift, and go to state 27

    $default  reduce using rule 85 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 28
    init_declarator_list      go to state 29
    init_declarator           go to state 30
    declarator                go to state 31
    direct_declarator         go to state 32
    pointer                   go to state 33


State 18

   86 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    AUTO      shift, and go to state 1
    RESTRICT  shift, and go to state 2
    EXTERN    shift, and go to state 3
    VOID      shift, and go to state 4
    FLOAT     shift, and go to state 5
    SHORT     shift, and go to state 6
    VOLATILE  shift, and go to state 7
    CHAR      shift, and go to state 8
    CONST     shift, and go to state 9
    STATIC    shift, and go to state 10
    INLINE    shift, and go to state 11
    INT       shift, and go to state 12
    DOUBLE    shift, and go to state 13
    LONG      shift, and go to state 14
    REGISTER  shift, and go to state 15

    $default  reduce using rule 91 (declaration_specifiers_opt)

    declaration_specifiers      go to state 34
    declaration_specifiers_opt  go to state 35
    storage_class_specifier     go to state 18
    type_specifier              go to state 19
    type_qualifier              go to state 20
    function_specifier          go to state 21


State 19

   87 declaration_specifiers: type_specifier . declaration_specifiers_opt

    AUTO      shift, and go to state 1
    RESTRICT  shift, and go to state 2
    EXTERN    shift, and go to state 3
    VOID      shift, and go to state 4
    FLOAT     shift, and go to state 5
    SHORT     shift, and go to state 6
    VOLATILE  shift, and go to state 7
    CHAR      shift, and go to state 8
    CONST     shift, and go to state 9
    STATIC    shift, and go to state 10
    INLINE    shift, and go to state 11
    INT       shift, and go to state 12
    DOUBLE    shift, and go to state 13
    LONG      shift, and go to state 14
    REGISTER  shift, and go to state 15

    $default  reduce using rule 91 (declaration_specifiers_opt)

    declaration_specifiers      go to state 34
    declaration_specifiers_opt  go to state 36
    storage_class_specifier     go to state 18
    type_specifier              go to state 19
    type_qualifier              go to state 20
    function_specifier          go to state 21


State 20

   88 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    AUTO      shift, and go to state 1
    RESTRICT  shift, and go to state 2
    EXTERN    shift, and go to state 3
    VOID      shift, and go to state 4
    FLOAT     shift, and go to state 5
    SHORT     shift, and go to state 6
    VOLATILE  shift, and go to state 7
    CHAR      shift, and go to state 8
    CONST     shift, and go to state 9
    STATIC    shift, and go to state 10
    INLINE    shift, and go to state 11
    INT       shift, and go to state 12
    DOUBLE    shift, and go to state 13
    LONG      shift, and go to state 14
    REGISTER  shift, and go to state 15

    $default  reduce using rule 91 (declaration_specifiers_opt)

    declaration_specifiers      go to state 34
    declaration_specifiers_opt  go to state 37
    storage_class_specifier     go to state 18
    type_specifier              go to state 19
    type_qualifier              go to state 20
    function_specifier          go to state 21


State 21

   89 declaration_specifiers: function_specifier . declaration_specifiers_opt

    AUTO      shift, and go to state 1
    RESTRICT  shift, and go to state 2
    EXTERN    shift, and go to state 3
    VOID      shift, and go to state 4
    FLOAT     shift, and go to state 5
    SHORT     shift, and go to state 6
    VOLATILE  shift, and go to state 7
    CHAR      shift, and go to state 8
    CONST     shift, and go to state 9
    STATIC    shift, and go to state 10
    INLINE    shift, and go to state 11
    INT       shift, and go to state 12
    DOUBLE    shift, and go to state 13
    LONG      shift, and go to state 14
    REGISTER  shift, and go to state 15

    $default  reduce using rule 91 (declaration_specifiers_opt)

    declaration_specifiers      go to state 34
    declaration_specifiers_opt  go to state 38
    storage_class_specifier     go to state 18
    type_specifier              go to state 19
    type_qualifier              go to state 20
    function_specifier          go to state 21


State 22

    0 $accept: translation_unit . $end
  189 translation_unit: translation_unit . external_declaration

    $end      shift, and go to state 39
    AUTO      shift, and go to state 1
    RESTRICT  shift, and go to state 2
    EXTERN    shift, and go to state 3
    VOID      shift, and go to state 4
    FLOAT     shift, and go to state 5
    SHORT     shift, and go to state 6
    VOLATILE  shift, and go to state 7
    CHAR      shift, and go to state 8
    CONST     shift, and go to state 9
    STATIC    shift, and go to state 10
    INLINE    shift, and go to state 11
    INT       shift, and go to state 12
    DOUBLE    shift, and go to state 13
    LONG      shift, and go to state 14
    REGISTER  shift, and go to state 15

    declaration              go to state 16
    declaration_specifiers   go to state 17
    storage_class_specifier  go to state 18
    type_specifier           go to state 19
    type_qualifier           go to state 20
    function_specifier       go to state 21
    external_declaration     go to state 40
    function_definition      go to state 24


State 23

  188 translation_unit: external_declaration .

    $default  reduce using rule 188 (translation_unit)


State 24

  190 external_declaration: function_definition .

    $default  reduce using rule 190 (external_declaration)


State 25

  117 direct_declarator: IDENTIFIER .

    $default  reduce using rule 117 (direct_declarator)


State 26

  118 direct_declarator: CIROPEN . declarator CIRCLOSE

    IDENTIFIER  shift, and go to state 25
    CIROPEN     shift, and go to state 26
    MUL         shift, and go to state 27

    declarator         go to state 41
    direct_declarator  go to state 32
    pointer            go to state 33


State 27

  133 pointer: MUL . type_qualifier_list_opt
  134        | MUL . type_qualifier_list_opt pointer

    RESTRICT  shift, and go to state 2
    VOLATILE  shift, and go to state 7
    CONST     shift, and go to state 9

    $default  reduce using rule 131 (type_qualifier_list_opt)

    type_qualifier           go to state 42
    type_qualifier_list_opt  go to state 43
    type_qualifier_list      go to state 44


State 28

   83 declaration: declaration_specifiers init_declarator_list_opt . LINEEND

    LINEEND  shift, and go to state 45


State 29

   84 init_declarator_list_opt: init_declarator_list .
   93 init_declarator_list: init_declarator_list . COMMA init_declarator

    COMMA  shift, and go to state 46

    $default  reduce using rule 84 (init_declarator_list_opt)


State 30

   92 init_declarator_list: init_declarator .

    $default  reduce using rule 92 (init_declarator_list)


State 31

   94 init_declarator: declarator .
   95                | declarator . EQUAL initializer
  192 function_definition: declaration_specifiers declarator . declaration_list_opt changetable compound_statement

    AUTO      shift, and go to state 1
    RESTRICT  shift, and go to state 2
    EXTERN    shift, and go to state 3
    VOID      shift, and go to state 4
    FLOAT     shift, and go to state 5
    SHORT     shift, and go to state 6
    VOLATILE  shift, and go to state 7
    CHAR      shift, and go to state 8
    CONST     shift, and go to state 9
    STATIC    shift, and go to state 10
    INLINE    shift, and go to state 11
    INT       shift, and go to state 12
    DOUBLE    shift, and go to state 13
    LONG      shift, and go to state 14
    REGISTER  shift, and go to state 15
    EQUAL     shift, and go to state 47

    CUROPEN   reduce using rule 195 (declaration_list_opt)
    $default  reduce using rule 94 (init_declarator)

    declaration              go to state 48
    declaration_specifiers   go to state 49
    storage_class_specifier  go to state 18
    type_specifier           go to state 19
    type_qualifier           go to state 20
    function_specifier       go to state 21
    declaration_list         go to state 50
    declaration_list_opt     go to state 51


State 32

  116 declarator: direct_declarator .
  119 direct_declarator: direct_declarator . SQROPEN type_qualifier_list assignment_expression SQRCLOSE
  120                  | direct_declarator . SQROPEN type_qualifier_list SQRCLOSE
  121                  | direct_declarator . SQROPEN assignment_expression SQRCLOSE
  122                  | direct_declarator . SQROPEN SQRCLOSE
  123                  | direct_declarator . SQROPEN STATIC type_qualifier_list assignment_expression SQRCLOSE
  124                  | direct_declarator . SQROPEN STATIC assignment_expression SQRCLOSE
  125                  | direct_declarator . SQROPEN type_qualifier_list MUL SQRCLOSE
  126                  | direct_declarator . SQROPEN MUL SQRCLOSE
  127                  | direct_declarator . CIROPEN changetable parameter_type_list CIRCLOSE
  128                  | direct_declarator . CIROPEN identifier_list CIRCLOSE
  129                  | direct_declarator . CIROPEN changetable CIRCLOSE

    SQROPEN  shift, and go to state 52
    CIROPEN  shift, and go to state 53

    $default  reduce using rule 116 (declarator)


State 33

  115 declarator: pointer . direct_declarator

    IDENTIFIER  shift, and go to state 25
    CIROPEN     shift, and go to state 26

    direct_declarator  go to state 54


State 34

   90 declaration_specifiers_opt: declaration_specifiers .

    $default  reduce using rule 90 (declaration_specifiers_opt)


State 35

   86 declaration_specifiers: storage_class_specifier declaration_specifiers_opt .

    $default  reduce using rule 86 (declaration_specifiers)


State 36

   87 declaration_specifiers: type_specifier declaration_specifiers_opt .

    $default  reduce using rule 87 (declaration_specifiers)


State 37

   88 declaration_specifiers: type_qualifier declaration_specifiers_opt .

    $default  reduce using rule 88 (declaration_specifiers)


State 38

   89 declaration_specifiers: function_specifier declaration_specifiers_opt .

    $default  reduce using rule 89 (declaration_specifiers)


State 39

    0 $accept: translation_unit $end .

    $default  accept


State 40

  189 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 189 (translation_unit)


State 41

  118 direct_declarator: CIROPEN declarator . CIRCLOSE

    CIRCLOSE  shift, and go to state 55


State 42

  135 type_qualifier_list: type_qualifier .

    $default  reduce using rule 135 (type_qualifier_list)


State 43

  133 pointer: MUL type_qualifier_list_opt .
  134        | MUL type_qualifier_list_opt . pointer

    MUL  shift, and go to state 27

    $default  reduce using rule 133 (pointer)

    pointer  go to state 56


State 44

  130 type_qualifier_list_opt: type_qualifier_list .
  136 type_qualifier_list: type_qualifier_list . type_qualifier

    RESTRICT  shift, and go to state 2
    VOLATILE  shift, and go to state 7
    CONST     shift, and go to state 9

    $default  reduce using rule 130 (type_qualifier_list_opt)

    type_qualifier  go to state 57


State 45

   83 declaration: declaration_specifiers init_declarator_list_opt LINEEND .

    $default  reduce using rule 83 (declaration)


State 46

   93 init_declarator_list: init_declarator_list COMMA . init_declarator

    IDENTIFIER  shift, and go to state 25
    CIROPEN     shift, and go to state 26
    MUL         shift, and go to state 27

    init_declarator    go to state 58
    declarator         go to state 59
    direct_declarator  go to state 32
    pointer            go to state 33


State 47

   95 init_declarator: declarator EQUAL . initializer

    IDENTIFIER        shift, and go to state 60
    FLOAT_CONSTANT    shift, and go to state 61
    CHAR_CONSTANT     shift, and go to state 62
    STRING_LITERAL    shift, and go to state 63
    INTEGER_CONSTANT  shift, and go to state 64
    SIZEOF            shift, and go to state 65
    CIROPEN           shift, and go to state 66
    CUROPEN           shift, and go to state 67
    INCRE             shift, and go to state 68
    DECRE             shift, and go to state 69
    AND               shift, and go to state 70
    MUL               shift, and go to state 71
    ADD               shift, and go to state 72
    SUB               shift, and go to state 73
    NEQ               shift, and go to state 74
    EXCL              shift, and go to state 75

    constant                   go to state 76
    primary_expression         go to state 77
    postfix_expression         go to state 78
    unary_expression           go to state 79
    unary_operator             go to state 80
    cast_expression            go to state 81
    multiplicative_expression  go to state 82
    additive_expression        go to state 83
    shift_expression           go to state 84
    relational_expression      go to state 85
    equality_expression        go to state 86
    and_expression             go to state 87
    exclusive_or_expression    go to state 88
    inclusive_or_expression    go to state 89
    logical_and_expression     go to state 90
    logical_or_expression      go to state 91
    conditional_expression     go to state 92
    assignment_expression      go to state 93
    initializer                go to state 94


State 48

  193 declaration_list: declaration .

    $default  reduce using rule 193 (declaration_list)


State 49

   83 declaration: declaration_specifiers . init_declarator_list_opt LINEEND

    IDENTIFIER  shift, and go to state 25
    CIROPEN     shift, and go to state 26
    MUL         shift, and go to state 27

    $default  reduce using rule 85 (init_declarator_list_opt)

    init_declarator_list_opt  go to state 28
    init_declarator_list      go to state 29
    init_declarator           go to state 30
    declarator                go to state 59
    direct_declarator         go to state 32
    pointer                   go to state 33


State 50

  194 declaration_list: declaration_list . declaration
  196 declaration_list_opt: declaration_list .

    AUTO      shift, and go to state 1
    RESTRICT  shift, and go to state 2
    EXTERN    shift, and go to state 3
    VOID      shift, and go to state 4
    FLOAT     shift, and go to state 5
    SHORT     shift, and go to state 6
    VOLATILE  shift, and go to state 7
    CHAR      shift, and go to state 8
    CONST     shift, and go to state 9
    STATIC    shift, and go to state 10
    INLINE    shift, and go to state 11
    INT       shift, and go to state 12
    DOUBLE    shift, and go to state 13
    LONG      shift, and go to state 14
    REGISTER  shift, and go to state 15

    $default  reduce using rule 196 (declaration_list_opt)

    declaration              go to state 95
    declaration_specifiers   go to state 49
    storage_class_specifier  go to state 18
    type_specifier           go to state 19
    type_qualifier           go to state 20
    function_specifier       go to state 21


State 51

  192 function_definition: declaration_specifiers declarator declaration_list_opt . changetable compound_statement

    $default  reduce using rule 132 (changetable)

    changetable  go to state 96


State 52
